genre-name bar fixed on mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -64,6 +64,12 @@
   .genre-name {
     width: 92%;
   }
+  .genre-name button {
+    font-size: 10px;
+  }
+  .genre-name {
+    font-size: 18px;
+  }
 }
 @media only screen and (max-width: 399px) {
   #movie-cards {
